18 Nov 2011
  - RPM package
  
23 Oct 2011
  - fix: urlencoding url fragments
  - print copyright and terms of service
  - print link back to wordreference.com

14 Aug 2011
  - version 1.1
  - 2x speedup by using gzip encoding
  - bash command line script 
  - improved test coverage  

7 Aug 2011
  - version 1.0
  - API + simple command line client (as executable jar)
 