@@ -2,7 +2,11 @@ package com.humaorie.wr.api;
 
 public class WordReferenceException extends RuntimeException {
 
-    public WordReferenceException(String fmt, Object... args) {
-        super(String.format(fmt, args));
+    public WordReferenceException(String message, Throwable cause) {
+        super(message, cause);
+    }
+
+    public WordReferenceException(String message) {
+        super(message);
     }
 }
