@@ -1,6 +1,8 @@
 18 Nov 2011
   - RPM package
-  
+  - introduced FileApiKeyProvider
+  - deprecated EnvironmnetApiKeyProvider 
+
 23 Oct 2011
   - fix: urlencoding url fragments
   - print copyright and terms of service
